--- a/app.json
+++ b/app.json
@@ -1,21 +1,21 @@
 {
-  "name": "Xlicon-MD",
+  "name": "WALLYJAYTECHY-MD",
   "version": "3.0.5",
-  "description": "Xlicon-MD, A modular advanced wabot",
+  "description": "WALLYJAYTECHY-MD, A modular advanced wabot",
   "logo": "https://i.ibb.co/FsvbwqF/XLICON.jpg",
-  "keywords": ["whatsapp", "bot", "md", "multi-device", "Xlicon", "Xlicon-MD", "wabot", "termux-bot", "sc-bot"],
+  "keywords": ["whatsapp", "bot", "md", "multi-device", "Tech", "WALLYJAYTECHY-MD", "wabot", "termux-bot", "sc-bot"],
   "repository": "https://github.com/salmanytofficial/XLICON-V3-MD",
   "stack": "container",
   "env": {
     "SUDO": {
       "description": "Add Owwner Number Here",
       "required": true,
-      "value": "923184070915"
+      "value": "2348144317152"
     },
     "SUDO_NAME": {
       "description": "Add Your Name Here",
       "required": true,
-      "value": "SᴀʟᴍᴀɴSᴇʀ"
+      "value": "WALLY JAY TECH"
     },
      "HKEY": {
       "description": "Put your Heroku api key Here , Get one from here https://dashboard.heroku.com/account",
@@ -34,42 +34,42 @@
     },
     "BOT_NAME": {
       "description": "Set Your Bot Name Here",
-      "required": false,
-      "value": "Xʟɪᴄᴏɴ_Mᴅ_V3"
+      "required": true,
+      "value": "XWALLYJAYTECHY-MD"
     },
      "PACK_NAME": {
       "description": "Enter Pack Name Here",
-      "required": false,
-      "value": "𝐗𝐋𝐈𝐂𝐎𝐍-𝐕𝟑"
+      "required": true,
+      "value": "WALLYJAYTECHY-MD"
      },
      "AUTHER_NAME": {
       "description": "Enter Auther Name Here",
-      "required": false,
-      "value": "ＭＡＤＥ   ＢＹ   ＳＡＬＭＡＮ"
+      "required": true,
+      "value": "ＭＡＤＥ   ＢＹ   WALLY JAY TECH"
      },
      "GL_VIP": {
       "description": "Enter Premium Members Numbers [ Each Saperated By Comma ]",
-      "required": false,
-      "value": "923184070915,923264476886"
+      "required": true,
+      "value": "2348144317152"
      },
     "WELCOME_MSG": {
       "description": "Welcome Message True/False",
-      "required": false,
+      "required": true,
       "value": "true"
      },
     "MENU_DESIGN": {
       "description": "Choose Any Style v1 => v8",
-      "required": false,
+      "required": true,
       "value": "v2"
      },
     "AUTO_STATUS_SEEN": {
       "description": "Auto Status Seen True/False",
-      "required": false,
+      "required": true,
       "value": "true"
      },
      "AUTO_BLOCK": {
       "description": "Set A Contary Code To Auto banned if u wanna",
-      "required": false,
+      "required": true,
       "value": "212"
      }
     },
