--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-   "name": "Wallyjaytech-Md",
+   "name": "suhail-md",
    "version": "1.3.7",
    "description": "Multi device whatsapp bot.",
    "main": "index.js",
    "type": "commonjs",  
    "scripts": {
-            "run": "pm2 start . --deep-monitoring --attach --name Wally Jay || node .",
-            "suhail": "pm2 start . --deep-monitoring --attach --name Wally Jay || node .",
-            "start": "pm2 start . --attach --name Wally Jay",
-            "stop": "pm2 stop Wally Jay",
-            "old-heroku-postbuild": "git clone https://github.com/walljaytechy/wallyjaytech-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
-            "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/wallyjaytech-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
+            "run": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
+            "suhail": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
+            "start": "pm2 start . --attach --name Suhail",
+            "stop": "pm2 stop Suhail",
+            "old-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
+            "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
             "dbs--postinstall": "npx puppeteer@latest install --y"
    },
-   "author": "wallyjaytechy",
+   "author": "SuhailTechInfo",
    "license" :"Apache-2.0",
    "dependencies": {
              "@adiwajshing/keyed-db": "^0.2.4",
@@ -74,8 +74,8 @@
    },
    "--repository": {
       "type": "git",
-      "url": "git+https://github.com/wallyjaytechy/wallyjaytech-Md.git"
+      "url": "git+https://github.com/SuhailTechInfo/Suhail-Md.git"
    },
-   "--bugs": { "url": "https://github.com/wallyjaytechy/wallyjaytech-Md/issues" },
-   "--homepage": "https://github.com/wallyjaytechy/wallyjaytech-Md#readme"
+   "--bugs": { "url": "https://github.com/SuhailTechInfo/Suhail-Md/issues" },
+   "--homepage": "https://github.com/SuhailTechInfo/Suhail-Md#readme"
 }
