--- a/package.json
+++ b/package.json
@@ -1,80 +1,71 @@
 {
-   "name": "wallyjaytech-md",
-   "description": "Multi device whatsapp bot.",
-   "main": "index.js",
-   "type": "commonjs",  
-   "scripts": {
-            "run": "pm2 start . --deep-monitoring --attach --name suhail || node .",
-            "suhail": "pm2 start . --deep-monitoring --attach --name suhail || node .",
-            "start": "pm2 start . --attach --name suhail",
-            "stop": "pm2 stop suhail",
-            "old-heroku-postbuild": "git clone https://github.com/Wallyjaytechy/Wallyjaytech-Md.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
-            "fis-heroku-postbuild": "git clone https://github.com/Wallyjaytechy/Wallyjaytech-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
-            "dbs--postinstall": "npx puppeteer@latest install --y"
-   },
-   "author": "WallyJayTech",
-   "license" :"Apache-2.0",
-   "dependencies": {
-             "@adiwajshing/keyed-db": "^0.2.4",
-             "@hapi/boom": "^9.1.4",
-             "@whiskeysockets/baileys": "6.6.0",             
-             "acrcloud": "^1.4.0",
-             "anime-character-random": "latest",
-             "aptoide-scraper": "^1.0.1",
-             "async-g-i-s": "^1.4.0",
-             "axios": "^0.24.0",
-             "canvas": "^2.11.2",
-             "cheerio": "^1.0.0-rc.10",
-             "child_process": "^1.0.2",
-             "crypto-js": "latest",
-             "discord-mongoose-economy": "^1.2.0",
-             "discord-xp": "^1.1.16",
-             "dotenv": "^16.0.0",
-             "express": "^4.18.1",
-             "ffmpeg": "^0.0.4",
-             "file-type": "^16.5.3",
-             "fluent-ffmpeg": "^2.1.2",
-             "form-data": "^4.0.0",
-             "fs-extra": "^10.1.0",
-             "google-it": "^1.6.4",
-             "google-tts-api": "^2.0.2",
-             "heroku-client": "3.1.0",
-             "human-readable": "^0.2.1",
-             "jimp": "^0.16.1",
-             "jsdom": "^16.4.0",
-             "koyeb-api-client": "latest",
-             "moment-timezone": "^0.5.34",
-             "mongoose": "^6.2.1",
-             "mumaker": "^2.0.0",
-             "node-cron": "^3.0.0",
-             "node-fetch": "^2.6.1",
-             "node-webpmux": "^3.1.0",
-             "pastebin-js": "latest",
-             "path": "^0.12.7",
-             "pg": "^8.11.3",
-             "pm2": "^5.2.0",
-             "qrcode": "latest",
-             "secktor-pack": "latest",
-             "simple-git": "^3.15.1",
-             "translatte": "^3.0.1",
-             "util": "^0.12.4",
-             "wa-sticker-formatter": "^4.3.2",
-             "youtubei.js": "^7.0.0",
-             "ytdl-secktor": "^0.0.1-development",
-             "link-preview-js": "^3.0.0",
-            "puppeteer": "latest"
-   },
-   "directories": {
-      "lib": "lib",
-      "plugins" :"lib/plugins"
-   },
-   "devDependencies": {
-      "pino": "^7.0.5"
-   },
-   "--repository": {
-      "type": "git",
-      "url": "git+https://github.com/Wallyjaytechy/Wallyjaytech-Md.git"
-   },
-   "--bugs": { "url": "https://github.com/Wallyjaytechy/Wallyjaytech-Md/issues" },
-   "--homepage": "https://github.com/Wallyjaytechy/Wallyjaytech-Md#readme"
+    "name": "WALLYJAYTECH-MD",
+    "version": "3.0",
+    "description": "Whatsapp Bot By Wally Jay",
+    "main": "index.js",
+    "type": "commonjs",
+    "directories": {
+        "lib": "lib",
+        "src": "src",
+        "media": "XliconMedia"
+    },
+    "scripts": {
+        "code": "node main.js",
+        "start": "node index.js"
+    },
+    "author": "wallyjaytechy",
+    "license": "MIT",
+    "dependencies": {
+        "@whiskeysockets/baileys": "^6.6.0",
+        "@adiwajshing/keyed-db": "^0.2.4",
+        "@hapi/boom": "^10.0.1",
+        "anime-wallpaper": "^1.0.2",
+        "api-dylux": "^1.4.4",
+        "aptoide-scraper": "^1.0.1",
+        "awesome-phonenumber": "^5.9.0",
+        "axios": "^1.4.0",
+        "chalk": "^4.1.2",
+        "cheerio": "^1.0.0-rc.12",
+        "cookie": "^0.5.0",
+        "crypto": "^1.0.1",
+        "file-type": "^16.5.3",
+        "fluent-ffmpeg": "^2.1.2",
+        "form-data": "^4.0.0",
+        "fs-extra": "^11.1.1",
+        "g-i-s": "^2.1.7",
+        "google-tts-api": "^2.0.2",
+        "google-it": "^1.6.2",
+        "human-readable": "^0.2.1",
+        "imgur": "2.3.0",
+        "javascript-obfuscator": "^4.0.0",
+        "jimp": "^0.16.13",
+        "jsdom": "^22.1.0",
+        "lodash": "^4.17.21",
+        "mal-scraper": "^2.11.4",
+        "mathjs": "^11.3.0",
+        "moment-timezone": "^0.5.43",
+        "node-cron": "^3.0.0",
+        "node-fetch": "^2.6.11",
+        "node-os-utils": "^1.3.7",
+        "node-webpmux": "^3.1.7",
+        "node-id3": "^0.2.3",
+        "node-youtube-music": "^0.8.3",
+        "object-query-string": "^1.2.0",
+        "pastebin-js": "^1.0.6",
+        "performance-now": "^2.1.0",
+        "pino": "^8.14.1",
+        "qrcode": "^1.5.3",
+        "qrcode-reader": "^1.0.4",
+        "qrcode-terminal": "^0.12.0",
+        "readline": "^1.3.0",
+        "request": "^2.88.2",
+        "set-cookie": "^0.0.4",
+        "steno": "^1.0.0",
+        "translate-google-api": "^1.0.4",
+        "@vitalets/google-translate-api": "^9.2.0",
+        "youtube-yts": "^2.0.0",
+        "ytdl-core": "^4.11.5",
+        "youtubedl-core": "^4.11.5",
+        "yt-search": "^2.10.4"
+    }
 }
