--- a/app.json
+++ b/app.json
@@ -1,110 +1,90 @@
 {
-  "name": "wallyjaytech-md@1.3.7",
-  "description": "I am Wallyjaytech-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/wallyjaytechy",
-  "logo": "https://telegra.ph/file/644e57bacdc8fc5a8f8ef.jpg",
-    "keywords": ["whatsappbot", "Wallyjaytechmd", "Wallyjaytech Md bot", "Wallyjaytech-Md", "WallyjaytechWhatsappBot", "WallyjaytechWaBot","WallyjaytechMD","Wallyjaytech Md Whatsapp Bot","multi device"],
-  "success_url": "/suhail/",
-  "app_url": "/qr/",
-  "stack":"container",
+  "name": "WALLYJAYTECH-MD",
+  "version": "3.0.5",
+  "description": "Wallyjaytech-MD, A modular advanced wabot",
+  "logo": "https://graph.org/file/99c8f663a3df96a5a54de.jpg",
+  "keywords": ["whatsapp", "bot", "md", "multi-device", "Wallyjaytech", "Wallyjaytech-MD", "wabot", "termux-bot", "sc-bot"],
+  "repository": "https://github.com/wallyjaytechy/WALLYJAYTECH-MD",
+  "stack": "container",
   "env": {
-    "OWNER_NAME": {
-      "description": "I am Wallyjaytech-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better",    
-      "value": "wally jay",
-      "required" :true
-    },   
-     
-    "WELCOME": {
-      "description": "put 'false' or 'true' to enable & disable WELCOME ",
-      "value": "true",
-      "required" :true
-    },
-     
-    "GOODBYE": {
-      "description": "put 'false' or 'true' to enable & disable GOODBYE ",
-      "value": "true",
-      "required" :true
-    },
-    "BOT_NAME": {
-      "description": " NAME FOR BOT",
-      "required" :false,    
-      "value": "WALLYJAYTECH-MD"
-    }, 
-    "TZ": {
-      "description": "Put TIME_ZONE according to your location",
-      "required" :false,    
-      "value": "Africa/Lagos"
-    },  
-    "FLUSH": {
-      "description": " Make it 'true' if bot connected but not responed (After deployement!)",
-      "required" :false,    
-      "value": "false"
-    },
-    "WARN_COUNT": {
-      "description": " Warn count for users to kick/block when warn limit exceed!",
-      "required" :false,    
-      "value": "3"
-    },
-    "HEROKU_API_KEY": {
-      "description": "Put Your Heroku Api Key Here",
-      "value": "",
-      "required" :true 
-    },   
-    "HEROKU_APP_NAME": {
-      "description": "Put Your Heroku App Name Here",
-      "value": "",
-    "required" :true
-    }, 
-    "MSGS_IN_LOG": {
-      "description": "Fill the value -true- if you want to see Messages in logs.",
-      "required" :false,
-      "value": "false"
-    },
-    "PREFIX": {
-      "description": "Enter your desired prefix for bot. you can set `all | . | .!*`",
-      "value": "."
-    },
-    "OWNER_NUMBER": {
-      "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
+    "SUDO": {
+      "description": "Add Owwner Number Here",
+      "required": true,
       "value": "2348144317152"
     },
-    "SESSION_ID": {
-      "description": "put your SESSION_ID here.",
+    "SUDO_NAME": {
+      "description": "Add Your Name Here",
+      "required": true,
+      "value": "WALLYJAYTECH"
+    },
+     "HKEY": {
+      "description": "Put your Heroku api key Here , Get one from here https://dashboard.heroku.com/account",
+      "required": true,
       "value": ""
-  
     },
-    "OPENAI_API_KEY": {
-      "description": "put your OPENAI api key here.Get it from beta.openai.com ",
-      "value": "",
-      "required" :false
-    }, 
-    "ELEVENLAB_API_KEY": {
-      "description": "Put your ElevenLab api key here for Aitts. Watch tutorial from https://youtu.be/HCDcdPtkwg4 ",
-      "value": "",
-      "required" :false
-    }, 
-    "REMOVE_BG_KEY": {
-      "description": "put your REMOVE BG KEY here.Get it from removeBg.com ",
-      "value": "",
-      "required" :false
+     "HAPP": {
+      "description": "Put the Heroku app name, same as above entered",
+      "required": true,
+      "value": ""
     },
-    "MODE": {
-      "description": "Worktype of your bot. Use public/private, if private then only bot number can use it. If public then everyone can use it.",
-      "value": "private"
+    "PREFIX": {
+      "description": "Set Your Prefix Here",
+      "required": true,
+      "value": "."
     },
-    "PACK_NAME": {
-      "description": "Put Sticker Pack_Name.",
-      "value": "Wallyjaytech Md",
-      "required": false 
+    "BOT_NAME": {
+      "description": "Set Your Bot Name Here",
+      "required": true,
+      "value": "WALLYJAYTECH-MD"
     },
-    "PACK_AUTHER": {
-      "description": "Put Sticker Author_Name.",
-      "value": "Wally Jay Tech",
-      "required": false 
+     "PACK_NAME": {
+      "description": "Enter Pack Name Here",
+      "required": true,
+      "value": "WALLYJAYTECH-MD"
+     },
+     "AUTHER_NAME": {
+      "description": "Enter Auther Name Here",
+      "required": true,
+      "value": "MADE BY WALLY JAY TECH"
+     },
+     "GL_VIP": {
+      "description": "Enter Premium Members Numbers [ Each Saperated By Comma ]",
+      "required": true,
+      "value": "2348144317152,2348106206532"
+     },
+    "WELCOME_MSG": {
+      "description": "Welcome Message True/False",
+      "required": true,
+      "value": "true"
+     },
+    "MENU_DESIGN": {
+      "description": "Choose Any Style v1 => v8",
+      "required": true,
+      "value": "v2"
+     },
+    "AUTO_STATUS_SEEN": {
+      "description": "Auto Status Seen True/False",
+      "required": true,
+      "value": "true"
+     },
+     "AUTO_BLOCK": {
+      "description": "Set A Country Code To Auto banned if u wanna",
+      "required": false,
+      "value": "212"
+     }
+    },
+    "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"
+    },
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+    },
+    {
+      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
     }
-  }, 
-  "addons": [{ "plan": "heroku-postgresql:basic" }],
-  "buildpacks": [
-    { "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" },
-    { "url": "https://github.com/carlosdommor/heroku-buildpack-ffmpeg-latest" }
   ]
 }
