--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "directories": {
         "lib": "lib",
         "src": "src",
-        "media": "XliconMedia"
+        "media": "WallyjaytechMedia"
     },
     "scripts": {
         "code": "node main.js",
